tests/NormalTests/paczka1/fuzzy1/56234633.err
Error in line 5: OP4Y9gt S406 6,1
Error in line 1: MRiW9v A790 19,0
Error in line 7: MRiW9v A577 78,4
Error in line 13: d1PAAxhAtVl S660 28,5
Error in line 12: OP4Y9gt A577 1,2
Error in line 18: d1PAAxhAtVl A577 63,2
Error in line 19: OP4Y9gt S660 38,3
Error in line 32: A577 S406 71,6
